test/compilable/imports/imp13582a.d
deprecated module imports.imp13582a;
import imports.imp13582b;
