test/fail_compilation/imports/a12400.d
module imports.a12400;

struct Tuple {}
